src/test/ui/const-generics/forbid-non-structural_match-types.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/forbid-non-structural_match-types.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0741]: the types of const generic parameters must derive `PartialEq` and `Eq`
  --> $DIR/forbid-non-structural_match-types.rs:11:19
   |
LL | struct D<const X: C>;
   |                   ^ `C` doesn't derive both `PartialEq` and `Eq`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0741`.
